<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TT动听</string>
    <string name="action_settings">Settings</string>
    <string name="start">开始音乐旅途</string>
    <!-- 首页 -->
    <string name="my">我的</string>
    <string name="findMusic">淘歌</string>
    <string name="search">搜索</string>
    <string name="recommend">推荐</string>
    <string name="myMusic">我的音乐</string>
    <string name="myFavourite">我的最爱</string>
    <string name="folder">文件夹</string>
    <string name="singer">歌手</string>
    <string name="style">风格</string>
    <string name="special">专辑</string>
    <string name="downloadManager">下载管理</string>
    <string name="musicHub">音乐圈</string>
    <!-- 定制首页 -->
    <string name="customHomePage">定制首页</string>
    <string name="recentAdd">最近添加</string>
    <string name="recentPlay">最近播放</string>
    <string name="createNewList">新建列表</string>
    <!-- 音乐播放 -->
    <string name="playNow">正在播放</string>
    <string name="prompt">提示：</string>
    <string name="confirmQuit">确认退出？</string>
    <string name="quit">退出</string>
    <string name="cancel">取消</string>
    
    <!-- 用户登录 -->
    <string name="welcomeLogin">欢迎登录</string>
    <string name="login_tip">登录后可收藏歌曲</string>
    <string name="email_inp_tip">请输入邮箱</string>
    <string name="psw_inp_tip">请输入密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="login_account_list">可以用以下账号登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="sina_login">微博登录</string>
    <!-- 关注好友 -->
    <string name="attentionfriends">关注好友</string>
    <string name="attention_recommend">推荐</string>
    <string name="ranking">排行</string>
    <string name="category">分类</string>
    
    <!-- homepage menu -->
    <string name="exit">退出</string>
    <string name="accountManager">账号管理</string>
    <string name="setting">设置</string>
    <string name="officialweibo">官方微博</string>
    <string name="nightMode">夜间模式</string>
    <string name="about">关于</string>
    <string name="suggestionFeedback">意见反馈</string>
</resources>
